# mememind

./: .gitignore  README.md  start_dev.sh
.agent/workflows/: safety_guard.md  scaffold_agent.md
app-mobile/: App.js  app.json  package-lock.json  package.json
app-mobile/src/api/: client.js
app-mobile/src/core/: config.js
app-mobile/src/screens/: HomeScreen.js  ResultScreen.js  UploadScreen.js
app-mobile/src/store/: memeStore.js
services/api/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  verify_e2e.py  verify_video.py
services/api/app/: main.py  worker.py
services/api/app/agents/: humor_engine.py  moment_detector.py  pipeline.py  reel_composer.py  template_stylist.py
services/api/app/core/: config.py
services/api/app/models/: job_status.py  meme_request.py  moment.py
services/api/app/routes/: generate_meme.py  jobs.py  moment.py  upload.py
services/api/app/services/: db.py  supabase_client.py
services/api/prisma/: schema.prisma
services/api/tests/: test_agents.py  test_generate_meme.py  test_prisma.py  test_supabase.py
services/db/: schema.sql
